Changes to the main content

--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
                 <div class="welcomeBoxContainer">
                     <div class="topBox">
                         <img src="img/card-suits-spades.png" alt="Spade">
-                        <p>Velkommen til Aarhus Bridgeklub</p>
+                        <h3>Velkommen til Aarhus Bridgeklub</h3>
                     </div>
                     <div class="backGroundImageWelcome"></div>
                     <div class="welcomeMessage">
-                        <p></p>
+                        <p>Velkommen til Aarhus Bridgeklub, som blev oprettet helt tilbage i 1934 og derfor er den ældste bridgeklub i Jylland</p>
+                        <p>Klubben er for alle, som kan lide at spille bridge uanset alder og niveau. Hvis du er nybegynder eller bare nysgerrig kan du komme på en af vores klubaftener og få en demonstration.</p>
                     </div>
+                    <input type="button" value="Læs Mere">
                 </div>
 
                 <!-- Container Klubaftener and Membership -->
@@ -82,6 +84,39 @@
                 <!-- Activity Plan -->
                 <div class="activityPlan">
 
+                    <!-- Title block  -->
+                    <div class="topBoxBlack">
+                        <img src="img/card-suits-hearts.png" alt="Spade">
+                        <h3>Aktivitetsplan</h3>
+                    </div>
+
+                    <!-- Table for dates and aktivity information -->
+                    <table class="aktivitetsPlannedDates">
+                        <tr>
+                            <td>29-05-18</td>
+                            <td>Klubmesterskab 2018</td>
+                        </tr>
+                        <tr>
+                            <td>22-05-18</td>
+                            <td>DM kvalifikation</td>
+                        </tr>
+                        <tr>
+                            <td>07-05-18</td>
+                            <td>Mandagsklubbens majturnering</td>
+                        </tr>
+                        <tr>
+                            <td>02-05-18</td>
+                            <td>Majturnering 2018 Onsdag aften</td>
+                        </tr>
+                        <tr>
+                            <td>02-05-18</td>
+                            <td>Majturnering 2018 Onsdag eftermiddag</td>
+                        </tr>
+                        <tr>
+                            <td>29-04-18</td>
+                            <td>Åbent hus</td>
+                        </tr>
+                    </table>
                 </div>
 
                 <!-- News Letter -->
